{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 14,
  "lineage": "7916c250-8e64-8bb6-e4df-a0e04585571b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:internet-gateway/igw-0e48b4e2c1ac30b81",
            "id": "igw-0e48b4e2c1ac30b81",
            "owner_id": "851725342829",
            "tags": {
              "Name": "cursoterraform-gateway"
            },
            "tags_all": {
              "Name": "cursoterraform-gateway"
            },
            "vpc_id": "vpc-0ff12725d22699079"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:route-table/rtb-0c909eea75ff1d091",
            "id": "rtb-0c909eea75ff1d091",
            "owner_id": "851725342829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e48b4e2c1ac30b81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cursoterraform-rtb"
            },
            "tags_all": {
              "Name": "cursoterraform-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff12725d22699079"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-internet-gateway",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc562f269babc21d",
            "route_table_id": "rtb-0c909eea75ff1d091",
            "subnet_id": "subnet-04f582168c3bdd9d4"
          },
          "dependencies": [
            "aws_internet_gateway.new-internet-gateway",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031a1245d3d4a1813",
            "route_table_id": "rtb-0c909eea75ff1d091",
            "subnet_id": "subnet-0d586b03862770911"
          },
          "dependencies": [
            "aws_internet_gateway.new-internet-gateway",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:security-group/sg-0a358e7c435429748",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a358e7c435429748",
            "ingress": [],
            "name": "terraform-20240921195336830900000001",
            "name_prefix": "terraform-",
            "owner_id": "851725342829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cursoterraform-sg"
            },
            "tags_all": {
              "Name": "cursoterraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff12725d22699079"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:subnet/subnet-04f582168c3bdd9d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f582168c3bdd9d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725342829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cursoterraform-subnet-0"
            },
            "tags_all": {
              "Name": "cursoterraform-subnet-0"
            },
            "vpc_id": "vpc-0ff12725d22699079"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:subnet/subnet-0d586b03862770911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d586b03862770911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725342829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cursoterraform-subnet-1"
            },
            "tags_all": {
              "Name": "cursoterraform-subnet-1"
            },
            "vpc_id": "vpc-0ff12725d22699079"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725342829:vpc/vpc-0ff12725d22699079",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e71d87fc18c77e84",
            "default_route_table_id": "rtb-01629dab80fc7494b",
            "default_security_group_id": "sg-0dcf8b818fa1775fd",
            "dhcp_options_id": "dopt-0b7b7d70246d4447b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff12725d22699079",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01629dab80fc7494b",
            "owner_id": "851725342829",
            "tags": {
              "Name": "cursoterraform-vpc"
            },
            "tags_all": {
              "Name": "cursoterraform-vpc"
            }
          }
        }
      ]
    }
  ]
}